[package]
name = "ohim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
headers = { workspace = true }
malloc_size_of = { workspace = true }
malloc_size_of_derive = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wit-component = { workspace = true }

[workspace]
resolver = '2'
members = ["wasm"]

[workspace.dependencies]
# Wasmtime crates
wasmtime = "34.0"
wasmtime-wasi = "34.0"
wit-component = "0.235.0"
# Servo crates
malloc_size_of = { package = "servo_malloc_size_of", git = "https://github.com/servo/servo" }
malloc_size_of_derive = "0.1"
# Others
anyhow = { version = "1.0.93", default-features = false }
bitflags = "2.9"
headers = "0.4"
regex = "1.11"
url = "2.5"
uuid = { version = "1.12.1", features = ["v4"] }
